package be.isims.ihm.dp.tp4.ex4.code;

public interface Observer {
    public void update(String value, String target, String rate);
}
