@startuml


  namespace be.isims.ihm.dp.tp4.ex4.code {
    abstract class be.isims.ihm.dp.tp4.ex4.code.AbstractController {
        + AbstractController()
        {abstract} + setValue()
        {abstract} + setValue()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    abstract class be.isims.ihm.dp.tp4.ex4.code.AbstractModel {
        - obs : ArrayList<Observer>
        + addObserver()
        {abstract} + convertcurrency()
        {abstract} + converttaxes()
        + notifyObserver()
        + removeObserver()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    class be.isims.ihm.dp.tp4.ex4.code.Converter {
        - rate : double
        - result : double
        + convertcurrency()
        + converttaxes()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    class be.isims.ihm.dp.tp4.ex4.code.ConverterController {
        + ConverterController()
        + setValue()
        + setValue()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    class be.isims.ihm.dp.tp4.ex4.code.ConverterFrm {
        - container : JPanel
        - convert : JRadioButton
        - f1Label : JLabel
        - f2Label : JLabel
        - field1 : JTextField
        - field2 : JTextField
        - rate : JTextField
        - taxes : JRadioButton
        + ConverterFrm()
        + update()
        - initUI()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    class be.isims.ihm.dp.tp4.ex4.code.ConverterFrm.RadioListener {
        + actionPerformed()
        + clearFields()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    class be.isims.ihm.dp.tp4.ex4.code.ConverterFrm.TextListener {
        + calculate()
        + changedUpdate()
        + insertUpdate()
        + removeUpdate()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    class be.isims.ihm.dp.tp4.ex4.code.Main {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    interface be.isims.ihm.dp.tp4.ex4.code.Observable {
        {abstract} + addObserver()
        {abstract} + notifyObserver()
        {abstract} + removeObserver()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex4.code {
    interface be.isims.ihm.dp.tp4.ex4.code.Observer {
        {abstract} + update()
    }
  }
  

  be.isims.ihm.dp.tp4.ex4.code.AbstractController o-- be.isims.ihm.dp.tp4.ex4.code.AbstractModel : am
  be.isims.ihm.dp.tp4.ex4.code.AbstractModel .up.|> be.isims.ihm.dp.tp4.ex4.code.Observable
  be.isims.ihm.dp.tp4.ex4.code.Converter -up-|> be.isims.ihm.dp.tp4.ex4.code.AbstractModel
  be.isims.ihm.dp.tp4.ex4.code.ConverterController -up-|> be.isims.ihm.dp.tp4.ex4.code.AbstractController
  be.isims.ihm.dp.tp4.ex4.code.ConverterFrm .up.|> be.isims.ihm.dp.tp4.ex4.code.Observer
  be.isims.ihm.dp.tp4.ex4.code.ConverterFrm -up-|> javax.swing.JFrame
  be.isims.ihm.dp.tp4.ex4.code.ConverterFrm o-- be.isims.ihm.dp.tp4.ex4.code.AbstractController : controler
  be.isims.ihm.dp.tp4.ex4.code.ConverterFrm +-down- be.isims.ihm.dp.tp4.ex4.code.ConverterFrm.RadioListener
  be.isims.ihm.dp.tp4.ex4.code.ConverterFrm +-down- be.isims.ihm.dp.tp4.ex4.code.ConverterFrm.TextListener
  be.isims.ihm.dp.tp4.ex4.code.ConverterFrm.RadioListener .down.|> java.awt.event.ActionListener
  be.isims.ihm.dp.tp4.ex4.code.ConverterFrm.TextListener .down.|> javax.swing.event.DocumentListener



@enduml
